[tool.poetry]
name = "chart-auto-encoder"
version = "0.1.0"
description = ""
authors = ["Ted Timbrell"]

[tool.poetry.dependencies]
python = "3.9.7"
scikit-learn = "^1.0.2"
python-dateutil = "^2.8.2"
matplotlib = "^3.5.1"
yfinance = "0.2.31"
h5py = "^3.6.0"
torch = "^2.0.1"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"